about page update

--- a/about.html
+++ b/about.html
@@ -382,13 +382,6 @@ About Area
                         <div class="img3">
                             <img src="assets/img/normal/about_10_3.png" alt="img">
                         </div>
-                        <div class="about-tag">
-                            <div class="about-experience-tag">
-                                <span class="circle-title-anime">Building Solutions</span>
-                            </div>
-                            <a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" class="play-btn popup-video"><i
-                                    class="fa-sharp fa-solid fa-play"></i></a>
-                        </div>
                     </div>
                 </div>
                 <div class="col-xl-6">
@@ -925,7 +918,8 @@ Team Area
                         01 </div>
                     <div class="property-card-details">
                         <h4 class="property-card-title text-theme">Vision-Driven Design</h4>
-                        <p class="property-card-text" style="color: #F6E3BA!important;">Every project begins with a big
+                        <p class="property-card-text" style="color: #F6E3BA!important; font-weight: 600;">Every project
+                            begins with a big
                             idea – not just floor plans. We
                             craft living, working, and lifestyle spaces that inspire people and transform neighborhoods.
                         </p>
@@ -942,7 +936,8 @@ Team Area
                         02 </div>
                     <div class="property-card-details">
                         <h4 class="property-card-title text-theme">Innovation Beyond Blueprints</h4>
-                        <p class="property-card-text" style="color: #F6E3BA!important;">We embrace technology and
+                        <p class="property-card-text" style="color: #F6E3BA!important; font-weight: 600;">We embrace
+                            technology and
                             creativity — from smart construction
                             methods to future-ready designs — ensuring that every landmark we build stands ahead of its
                             time.
@@ -961,7 +956,8 @@ Team Area
                     <div class="property-card-details">
                         <h4 class="property-card-title text-theme">Crafted Experiences, Not Just Buildings
                         </h4>
-                        <p class="property-card-text" style="color: #F6E3BA!important;">We don’t deliver walls and
+                        <p class="property-card-text" style="color: #F6E3BA!important; font-weight: 600;">We don’t
+                            deliver walls and
                             roofs. We deliver environments where
                             families thrive, businesses grow, and communities flourish.
                         </p>
@@ -978,7 +974,8 @@ Team Area
                         04 </div>
                     <div class="property-card-details">
                         <h4 class="property-card-title text-theme">Unmatched Transparency & Trust</h4>
-                        <p class="property-card-text" style="color: #F6E3BA!important;">From clear communication to
+                        <p class="property-card-text" style="color: #F6E3BA!important; font-weight: 600;">From clear
+                            communication to
                             ethical practices, we ensure that
                             every client knows exactly what to expect. With Mindscape, there are no hidden clauses —
                             only honesty, commitment, and reliability.</p>
@@ -994,7 +991,7 @@ Team Area
                         05 </div>
                     <div class="property-card-details">
                         <h4 class="property-card-title text-theme">From Land to Landmark</h4>
-                        <p class="property-card-text " style="color: #F6E3BA!important;">
+                        <p class="property-card-text " style="color: #F6E3BA!important; font-weight: 600;">
                             Our promise is simple: wherever Mindscape builds, it leaves behind more than a structure —
                             it leaves a statement.
                         </p>
@@ -1027,10 +1024,9 @@ Team Area
                                     <div class="form-group style-border2 style-radius col-md-12">
                                         <select name="subject" id="subject" class="form-select">
                                             <option value="" disabled selected hidden>Select Service Type</option>
-                                            <option value="Real Estate">Real Estate</option>
-                                            <option value="Apartment">Apartment</option>
-                                            <option value="Residencial">Residencial</option>
-                                            <option value="Deluxe">Deluxe</option>
+                                            <option value="Residential">Residential</option>
+                                            <option value="Corporate">Corporate</option>
+                                            <option value="Hospitality">Hospitality</option>
                                         </select>
                                         <i class="fal fa-angle-down"></i>
                                     </div>
