--- a/contact.html
+++ b/contact.html
@@ -380,7 +380,7 @@ Contact Area
             <div class="row gx-35">
                 <div class="col-lg-5">
                     <div class="title-area">
-                        <h2 class="sec-title" style="color: black;">Contact info</h2>
+                        <h2 class="sec-title" style="color: black;"><i class="fa-solid fa-address-book"></i> <span style="border-bottom: 2px solid var(--theme-color);">Contact info</span></h2>
                         <p>Builda help you easily create a construction company website. With the function Register,
                             Login, Post construction news.</p>
                     </div>
@@ -450,7 +450,7 @@ Contact Area
             <div class="row gx-60 gy-60 justify-content-end">
                 <div class="col-lg-6">
                     <div class="appointment-wrap contact-wrap6">
-                        <h2 class="form-title fw-semibold mb-35">Get in Touch</h2>
+                        <h2 class="form-title fw-semibold mb-35"><i class="fa-solid fa-comment"></i> <span style="border-bottom: 2px solid var(--theme-color);">Get in Touch</span></h2>
                         <form action="mail.php" method="POST" class="appointment-form ajax-contact">
                             <div class="row">
                                 <div class="form-group style-border2 style-radius col-lg-6">
