--- a/service.html
+++ b/service.html
@@ -382,9 +382,10 @@ Service Page Area
                             <img src="assets/img/property/property6-1.jpg" alt="img">
                         </div>
                         <div class="property-card-details">
-                            <h4 class="property-card-title"><a href="service-details.html">Building Construction</a>
+                            <h4 class="property-card-title"><a href="service-details.html"
+                                    style="border-bottom: 2px solid var(--theme-color)">Building Construction</a>
                             </h4>
-                            <p class="property-card-text">Our post-construction
+                            <p class="property-card-text" style="font-weight: 600;">Our post-construction
                                 services gives you peace of mind knowing
                                 that we are still here for you even after by graviton construction.</p>
                             <div class="property-btn-wrap">
@@ -404,8 +405,9 @@ Service Page Area
                             <img src="assets/img/property/property6-2.jpg" alt="img">
                         </div>
                         <div class="property-card-details">
-                            <h4 class="property-card-title"><a href="service-details.html">Architecture Design</a></h4>
-                            <p class="property-card-text">Our post-construction
+                            <h4 class="property-card-title"><a href="service-details.html"
+                                    style="border-bottom: 2px solid var(--theme-color)">Architecture Design</a></h4>
+                            <p class="property-card-text" style="font-weight: 600;">Our post-construction
                                 services gives you peace of mind knowing
                                 that we are still here for you even after by graviton construction.</p>
                             <div class="property-btn-wrap">
@@ -425,9 +427,10 @@ Service Page Area
                             <img src="assets/img/property/property6-3.jpg" alt="img">
                         </div>
                         <div class="property-card-details">
-                            <h4 class="property-card-title"><a href="service-details.html">Luxury
+                            <h4 class="property-card-title"><a href="service-details.html"
+                                    style="border-bottom: 2px solid var(--theme-color)">Luxury
                                     Makeover</a></h4>
-                            <p class="property-card-text">Our post-construction
+                            <p class="property-card-text" style="font-weight: 600;">Our post-construction
                                 services gives you peace of mind knowing
                                 that we are still here for you even after by graviton construction.</p>
                             <div class="property-btn-wrap">
@@ -447,10 +450,11 @@ Service Page Area
                             <img src="assets/img/property/property6-4.jpg" alt="img">
                         </div>
                         <div class="property-card-details">
-                            <h4 class="property-card-title"><a href="service-details.html">Luxury
+                            <h4 class="property-card-title"><a href="service-details.html"
+                                    style="border-bottom: 2px solid var(--theme-color)">Luxury
                                     Floors & Elevated
                                     Roofs</a></h4>
-                            <p class="property-card-text">Our post-construction
+                            <p class="property-card-text" style="font-weight: 600;">Our post-construction
                                 services gives you peace of mind knowing
                                 that we are still here for you even after by graviton construction.</p>
                             <div class="property-btn-wrap">
@@ -470,9 +474,10 @@ Service Page Area
                             <img src="assets/img/property/property6-5.jpg" alt="img">
                         </div>
                         <div class="property-card-details">
-                            <h4 class="property-card-title"><a href="service-details.html">General
+                            <h4 class="property-card-title"><a href="service-details.html"
+                                    style="border-bottom: 2px solid var(--theme-color)">General
                                     Contracting</a></h4>
-                            <p class="property-card-text">Our post-construction
+                            <p class="property-card-text" style="font-weight: 600;">Our post-construction
                                 services gives you peace of mind knowing
                                 that we are still here for you even after by graviton construction.</p>
                             <div class="property-btn-wrap">
@@ -492,9 +497,10 @@ Service Page Area
                             <img src="assets/img/property/property6-6.jpg" alt="img">
                         </div>
                         <div class="property-card-details">
-                            <h4 class="property-card-title"><a href="service-details.html">Renovate, Repair & Expand</a>
+                            <h4 class="property-card-title"><a href="service-details.html"
+                                    style="border-bottom: 2px solid var(--theme-color)">Renovate, Repair & Expand</a>
                             </h4>
-                            <p class="property-card-text">Our post-construction
+                            <p class="property-card-text" style="font-weight: 600;">Our post-construction
                                 services gives you peace of mind knowing
                                 that we are still here for you even after by graviton construction.</p>
                             <div class="property-btn-wrap">
