--- a/project.html
+++ b/project.html
@@ -377,13 +377,17 @@ Project Page Area
             <div class="row gy-40">
                 <div class="col-md-6">
                     <div class="property-card7 style2">
-                        <div class="property-card-thumb img-shine">
+                        <div class="property-card-thumb img-shine" style="border: 2px solid black;">
                             <img src="assets/img/project/Picture1.png" alt="Villa Bougainvillea">
                         </div>
                         <div class="property-card-details">
                             <div class="media-left">
-                                <h4 class="property-card-title" style="color: black;">Villa Bougainvillea -
-                                    5BHK
+                                <h4 class="property-card-title" style="color: black;"><span
+                                        style=" border-bottom: 2px solid var(--theme-color);">
+                                        Villa
+                                        Bougainvillea -
+                                        5BHK
+                                    </span>
                                 </h4>
                                 <p class="property-card-subtitle">Designing , Planning , Execution and Interior</p>
                             </div>
@@ -392,12 +396,13 @@ Project Page Area
                 </div>
                 <div class="col-md-6">
                     <div class="property-card7 style2">
-                        <div class="property-card-thumb img-shine">
+                        <div class="property-card-thumb img-shine" style="border: 2px solid black;">
                             <img src="assets/img/project/Picture2.png" alt="Seaview Apartments ">
                         </div>
                         <div class="property-card-details">
                             <div class="media-left">
-                                <h4 class="property-card-title" style="color: black;">Seaview Apartments
+                                <h4 class="property-card-title" style="color: black;"><span
+                                        style=" border-bottom: 2px solid var(--theme-color);">Seaview Apartments</span>
                                 </h4>
                                 <p class="property-card-subtitle">Designing , Planning , Execution and Interior</p>
                             </div>
@@ -406,12 +411,13 @@ Project Page Area
                 </div>
                 <div class="col-md-6">
                     <div class="property-card7 style2">
-                        <div class="property-card-thumb img-shine">
+                        <div class="property-card-thumb img-shine" style="border: 2px solid black;">
                             <img src="assets/img/project/Picture3.png" alt="4BHK Villa">
                         </div>
                         <div class="property-card-details">
                             <div class="media-left">
-                                <h4 class="property-card-title" style="color: black;">4BHK Villa</h4>
+                                <h4 class="property-card-title" style="color: black;"><span
+                                        style=" border-bottom: 2px solid var(--theme-color);">4BHK Villa</span></h4>
                                 <p class="property-card-subtitle">Engineering & Construction</p>
                             </div>
                         </div>
@@ -419,12 +425,13 @@ Project Page Area
                 </div>
                 <div class="col-md-6">
                     <div class="property-card7 style2">
-                        <div class="property-card-thumb img-shine">
+                        <div class="property-card-thumb img-shine" style="border: 2px solid black;">
                             <img src="assets/img/project/Picture4.png" alt="Luxe Mansion">
                         </div>
                         <div class="property-card-details">
                             <div class="media-left">
-                                <h4 class="property-card-title" style="color: black;">Luxe Mansion</h4>
+                                <h4 class="property-card-title" style="color: black;"><span
+                                        style=" border-bottom: 2px solid var(--theme-color);">Luxe Mansion</span></h4>
                                 <p class="property-card-subtitle">Engineering , Designing & Construction</p>
                             </div>
                         </div>
