--- a/architecture-design.html
+++ b/architecture-design.html
@@ -625,8 +625,10 @@ Service Page Area
                             <img src="assets/img/property/property6-2.jpg" alt="Architecture Design">
                         </div>
                         <div class="page-content">
-                            <h2 class="page-title fw-semibold"><i class="fa-solid fa-compass-drafting"></i> Architecture
-                                Design
+                            <h2 class="page-title fw-semibold"><i class="fa-solid fa-compass-drafting"></i> <span style="border-bottom: 2px solid var(--theme-color);">
+                                Architecture
+                                    Design
+                            </span>
                             </h2>
                             <p class="mb-30" style="font-weight: 600;">At Mindscape Construction, our Architectural
                                 Design services combine artistic vision with engineering precision to create spaces that
