--- a/general-contracting.html
+++ b/general-contracting.html
@@ -625,8 +625,11 @@ Service Page Area
                             <img src="assets/img/property/property6-5.jpg" alt="General Contracting">
                         </div>
                         <div class="page-content">
-                            <h2 class="page-title fw-semibold"><i class="fa-solid fa-helmet-safety"></i> General
-                                Contracting
+                            <h2 class="page-title fw-semibold"><i class="fa-solid fa-helmet-safety"></i> <span
+                                    style="border-bottom: 2px solid var(--theme-color);">
+                                    General
+                                    Contracting
+                                </span>
                             </h2>
                             <p class="mb-30" style="font-weight: 600;">As a trusted leader in General Contracting,
                                 Mindscape Construction provides comprehensive solutions for projects of every scale and
