--- a/luxury-floors-elevated-roofs.html
+++ b/luxury-floors-elevated-roofs.html
@@ -625,8 +625,10 @@ Service Page Area
                             <img src="assets/img/property/property6-4.jpg" alt="Luxury Floors & Elevated Roofs">
                         </div>
                         <div class="page-content">
-                            <h2 class="page-title fw-semibold"><i class="fa-solid fa-crown"></i> Luxury Floors &
-                                Elevated Roofs
+                            <h2 class="page-title fw-semibold"><i class="fa-solid fa-crown"></i> <span style="border-bottom: 2px solid var(--theme-color);">
+                                Luxury Floors &
+                                    Elevated Roofs
+                            </span>
                             </h2>
                             <p class="mb-30" style="font-weight: 600;">At Mindscape Constructions, we redefine living
                                 spaces by crafting luxury floors and elevated roof designs that blend sophistication
