--- a/luxury-makeover.html
+++ b/luxury-makeover.html
@@ -625,7 +625,8 @@ Service Page Area
                             <img src="assets/img/property/property6-3.jpg" alt="Luxury Makeover">
                         </div>
                         <div class="page-content">
-                            <h2 class="page-title fw-semibold"><i class="fa-solid fa-object-group"></i> Luxury Makeover
+                            <h2 class="page-title fw-semibold"><i class="fa-solid fa-object-group"></i> <span
+                                    style="border-bottom: 2px solid var(--theme-color);">Luxury Makeover</span>
                             </h2>
                             <p class="mb-30" style="font-weight: 600;">Transform your property into a statement of
                                 luxury with Mindscape Construction’s premium makeover services. We specialize in luxury
