--- a/project.html
+++ b/project.html
@@ -441,7 +441,212 @@ Project Page Area
             </div>
         </div>
 
-    </section><!--==============================
+    </section>
+
+
+    <section class="space overflow-hidden bg-black2" id="property-sec">
+        <div class="sec-bg-shape2-1 spin shape-mockup d-xl-block d-none" data-top="10%" data-left="-2%">
+            <img src="assets/img/shape/section_shape_2_1.jpg" alt="img">
+        </div>
+        <div class="sec-bg-shape2-3 jump shape-mockup d-xl-block d-none" data-bottom="35%" data-right="2%">
+            <img src="assets/img/shape/section_shape_2_3.jpg" alt="img">
+        </div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-7">
+                    <div class="title-area text-center">
+                        <h2 class="sec-title text-theme"
+                            style="display: flex; justify-content: center; align-items: center; gap: 4px;">
+                            <i class="fa-solid fa-house" style="font-size: 32px;"></i>
+                            <span>Check Our Latest Projects</span>
+                            <i class="fa-solid fa-house" style="font-size: 32px;"></i>
+                        </h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container th-container2">
+            <div class="slider-area property-slider2 slider-drag-wrap">
+                <div class="swiper th-slider"
+                    data-slider-options='{"breakpoints":{"0":{"slidesPerView":1},"576":{"slidesPerView":"1"},"768":{"slidesPerView":"2"},"992":{"slidesPerView":"2"},"1200":{"slidesPerView":"3"},"1500":{"slidesPerView":"3"}},"spaceBetween":"32","grabCursor":"true","slideToClickedSlide":"true"}'>
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="property-card7">
+                                <div class="property-card-thumb img-shine">
+                                    <img src="assets/img/project/project-1.jpg" alt="img">
+                                </div>
+                                <!-- <div class="property-card-details">
+                                    <div class="media-left">
+                                        <h4 class="property-card-title"><a href="project-details.html">Crystal Palace
+                                                Building</a></h4>
+                                        <p class="property-card-subtitle">Commercial Projects</p>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="property-card7">
+                                <div class="property-card-thumb img-shine">
+                                    <img src="assets/img/project/project-2.jpg" alt="img">
+                                </div>
+                                <!-- <div class="property-card-details">
+                                    <div class="media-left">
+                                        <h4 class="property-card-title"><a href="project-details.html">Crystal Palace
+                                                Building</a></h4>
+                                        <p class="property-card-subtitle">Commercial Projects</p>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="property-card7">
+                                <div class="property-card-thumb img-shine">
+                                    <img src="assets/img/project/project-3.jpg" alt="img">
+                                </div>
+                                <!-- <div class="property-card-details">
+                                    <div class="media-left">
+                                        <h4 class="property-card-title"><a href="project-details.html">Crystal Palace
+                                                Building</a></h4>
+                                        <p class="property-card-subtitle">Commercial Projects</p>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="property-card7">
+                                <div class="property-card-thumb img-shine">
+                                    <img src="assets/img/project/project-4.jpg" alt="img">
+                                </div>
+                                <!-- <div class="property-card-details">
+                                    <div class="media-left">
+                                        <h4 class="property-card-title"><a href="project-details.html">Crystal Palace
+                                                Building</a></h4>
+                                        <p class="property-card-subtitle">Commercial Projects</p>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="property-card7">
+                                <div class="property-card-thumb img-shine">
+                                    <img src="assets/img/project/project-5.jpg" alt="img">
+                                </div>
+                                <!-- <div class="property-card-details">
+                                    <div class="media-left">
+                                        <h4 class="property-card-title"><a href="project-details.html">Crystal Palace
+                                                Building</a></h4>
+                                        <p class="property-card-subtitle">Commercial Projects</p>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="property-card7">
+                                <div class="property-card-thumb img-shine">
+                                    <img src="assets/img/project/project-6.jpg" alt="img">
+                                </div>
+                                <!-- <div class="property-card-details">
+                                    <div class="media-left">
+                                        <h4 class="property-card-title"><a href="project-details.html">Crystal Palace
+                                                Building</a></h4>
+                                        <p class="property-card-subtitle">Commercial Projects</p>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="property-card7">
+                                <div class="property-card-thumb img-shine">
+                                    <img src="assets/img/project/project-7.jpg" alt="img">
+                                </div>
+                                <!-- <div class="property-card-details">
+                                    <div class="media-left">
+                                        <h4 class="property-card-title"><a href="project-details.html">Crystal Palace
+                                                Building</a></h4>
+                                        <p class="property-card-subtitle">Commercial Projects</p>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="property-card7">
+                                <div class="property-card-thumb img-shine">
+                                    <img src="assets/img/project/project-8.jpg" alt="img">
+                                </div>
+                                <!-- <div class="property-card-details">
+                                    <div class="media-left">
+                                        <h4 class="property-card-title"><a href="project-details.html">Crystal Palace
+                                                Building</a></h4>
+                                        <p class="property-card-subtitle">Commercial Projects</p>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="property-card7">
+                                <div class="property-card-thumb img-shine">
+                                    <img src="assets/img/project/project-9.jpg" alt="img">
+                                </div>
+                                <!-- <div class="property-card-details">
+                                    <div class="media-left">
+                                        <h4 class="property-card-title"><a href="project-details.html">Crystal Palace
+                                                Building</a></h4>
+                                        <p class="property-card-subtitle">Commercial Projects</p>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="property-card7">
+                                <div class="property-card-thumb img-shine">
+                                    <img src="assets/img/project/project-10.jpg" alt="img">
+                                </div>
+                                <!-- <div class="property-card-details">
+                                    <div class="media-left">
+                                        <h4 class="property-card-title"><a href="project-details.html">Crystal Palace
+                                                Building</a></h4>
+                                        <p class="property-card-subtitle">Commercial Projects</p>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="property-card7">
+                                <div class="property-card-thumb img-shine">
+                                    <img src="assets/img/project/project-11.jpg" alt="img">
+                                </div>
+                                <!-- <div class="property-card-details">
+                                    <div class="media-left">
+                                        <h4 class="property-card-title"><a href="project-details.html">Crystal Palace
+                                                Building</a></h4>
+                                        <p class="property-card-subtitle">Commercial Projects</p>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="property-card7">
+                                <div class="property-card-thumb img-shine">
+                                    <img src="assets/img/project/project-12.jpg" alt="img">
+                                </div>
+                                <!-- <div class="property-card-details">
+                                    <div class="media-left">
+                                        <h4 class="property-card-title"><a href="project-details.html">Crystal Palace
+                                                Building</a></h4>
+                                        <p class="property-card-subtitle">Commercial Projects</p>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!--==============================
 	Footer Area
 ==============================-->
     <footer class="footer-wrapper footer-layout2-2 footer-default  bg-black2 background-image"
