--- a/renovate-repair-expand.html
+++ b/renovate-repair-expand.html
@@ -625,8 +625,10 @@ Service Page Area
                             <img src="assets/img/property/property6-6.jpg" alt="Renovate, Repair & Expand">
                         </div>
                         <div class="page-content">
-                            <h2 class="page-title fw-semibold"><i class="fa-solid fa-screwdriver-wrench"></i> Renovate,
-                                Repair & Expand
+                            <h2 class="page-title fw-semibold"><i class="fa-solid fa-screwdriver-wrench"></i> <span style="border-bottom: 2px solid var(--theme-color);">
+                                Renovate,
+                                    Repair & Expand
+                            </span>
                             </h2>
                             <p class="mb-30" style="font-weight: 600;">Revitalize your spaces with Mindscape
                                 Construction’s expert Renovation, Repair, and Expansion services. We understand that
