--- a/building-construction.html
+++ b/building-construction.html
@@ -625,8 +625,10 @@ Service Page Area
                             <img src="assets/img/property/property6-1.jpg" alt="Building Construction">
                         </div>
                         <div class="page-content">
-                            <h2 class="page-title fw-semibold"><i class="fa-solid fa-building"></i> Building
-                                Construction</h2>
+                            <h2 class="page-title fw-semibold"><i class="fa-solid fa-building"></i> <span  style="border-bottom: 2px solid var(--theme-color);">
+                                    Building
+                                    Construction
+                                </span></h2>
                             <p class="mb-30" style="font-weight: 600;">At Mindscape Construction, we take pride in
                                 delivering exceptional building
                                 construction services that blend strength, functionality, and modern design. Our
